refactor of code

--- a/index.html
+++ b/index.html
@@ -14,38 +14,37 @@
     </head>
 
     <body>
+        <header>
+            <div class="other_content"></div>
+        </header>
         <div class="container">
             <div class="carousel">
-                <div class="slider1">
-                    <section><img  src="./Assets/slider-image-1.jpg" alt="1" width="260px" height="200px"></section>
-                    <section><img  src="./Assets/slider-image-2.jpg" alt="2" width="120px" height="200px"></section>
-                    <section><img src="./Assets/slider-image-3.jpg" alt="3" width="180px" height="200px"></section>
-                    <section><img src="./Assets/slider-image-4.jpg" alt="4" width="220px" height="200px"></section>
-                    <section><img src="./Assets/slider-image-5.jpg" alt="5" width="260px" height="200px"></section>
-                    <section><img src="./Assets/slider-image-6.jpg" alt="6" width="120px" height="200px"></section>
-                    <section><img src="./Assets/slider-image-7.jpg" alt="7" width="180px" height="200px"></section>
-                    <section><img src="./Assets/slider-image-8.jpg" alt="8" width="180px" height="200px"></section>
-                    <section><img src="./Assets/slider-image-9.jpg" alt="9" width="220px" height="200px"></section>
+                <div class="slider_one">
+                    <img class="slider_image"  src="./Assets/slider-image-1.jpg" alt="1">
+                    <img class="slider_image"  src="./Assets/slider-image-2.jpg" alt="2">
+                    <img class="slider_image" src="./Assets/slider-image-3.jpg" alt="3" >
+                    <img class="slider_image" src="./Assets/slider-image-4.jpg" alt="4" >
+                    <img class="slider_image" src="./Assets/slider-image-5.jpg" alt="5" >
+                    <img class="slider_image" src="./Assets/slider-image-6.jpg" alt="6" >
+                    <img class="slider_image" src="./Assets/slider-image-7.jpg" alt="7" >
+                    <img class="slider_image" src="./Assets/slider-image-8.jpg" alt="8" >
+                    <img class="slider_image" src="./Assets/slider-image-9.jpg" alt="9" >
                 </div>
-                <div class="item2">
-                    <div class="slider2">
-                        <section><img src="./Assets/slider-image-9.jpg" alt="9" width="220px" height="200px"></section>
-                        <section><img src="./Assets/slider-image-8.jpg" alt="8" width="180px" height="200px"></section>
-                        <section><img src="./Assets/slider-image-7.jpg" alt="7" width="180px" height="200px"></section>
-                        <section><img src="./Assets/slider-image-6.jpg" alt="6" width="120px" height="200px"></section>
-                        <section><img src="./Assets/slider-image-5.jpg" alt="5" width="260px" height="200px"></section>
-                        <section><img src="./Assets/slider-image-4.jpg" alt="4" width="220px" height="200px"></section>
-                        <section><img src="./Assets/slider-image-3.jpg" alt="3" width="180px" height="200px"></section>
-                        <section><img  src="./Assets/slider-image-2.jpg" alt="2" width="120px" height="200px"></section>
-                        <section><img  src="./Assets/slider-image-1.jpg" alt="1" width="260px" height="200px"></section>       
+                <div class="row_bottom">
+                    <div class="slider_two">
+                        <img class="slider_image" src="./Assets/slider-image-9.jpg" alt="9" >
+                        <img class="slider_image" src="./Assets/slider-image-8.jpg" alt="8" >
+                        <img class="slider_image" src="./Assets/slider-image-7.jpg" alt="7" >
+                        <img class="slider_image" src="./Assets/slider-image-6.jpg" alt="6" >
+                        <img class="slider_image" src="./Assets/slider-image-5.jpg" alt="5" >
+                        <img class="slider_image" src="./Assets/slider-image-4.jpg" alt="4" >
+                        <img class="slider_image" src="./Assets/slider-image-3.jpg" alt="3" >
+                        <img class="slider_image"  src="./Assets/slider-image-2.jpg" alt="2">
+                        <img class="slider_image"  src="./Assets/slider-image-1.jpg" alt="1">       
                     </div>
                     <div class="controls">
-                        <div class="button-prev prev">
-                            <span class="prev"><img id="left" src="./Assets/arrow-blue-left.png" alt="prev"></span>
-                        </div>
-                        <div class="button-next next">
-                            <span class="next"><img id="right" src="./Assets/arrow-blue-right.png" alt="next"></span>
-                        </div>
+                            <button class="prev"><img id="left" src="./Assets/arrow-gray-left.png" alt="prev"></button>
+                            <button class="next"><img id="right" src="./Assets/arrow-gray-right.png" alt="next"></button>
                     </div>
                 </div>
             </div>
@@ -58,7 +57,9 @@
                 </p>
             </div>
         </div>
+        <footer>
+            <div class="other_content"></div>
+        </footer>
+        <script src="main.js" defer></script>
     </body>
-
-    <script src="main.js"></script>
 </html>
