--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <body>
         <header>
-            <div class="other_content"></div>
+            <div class="other_content header_el_one"></div>
+            <div class="other_content header_el_two"></div>
         </header>
         <div class="container">
             <div class="carousel">
@@ -58,7 +59,7 @@
             </div>
         </div>
         <footer>
-            <div class="other_content"></div>
+            <div class="other_content footer_el"></div>
         </footer>
         <script src="./js/main.min.transpiled.js" defer></script>
     </body>
