--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
         <div class="container">
             <div class="carousel">
                 <div class="slider_one">
-                    <img class="slider_image"  src="./Assets/slider-image-1.jpg" alt="1">
-                    <img class="slider_image"  src="./Assets/slider-image-2.jpg" alt="2">
-                    <img class="slider_image" src="./Assets/slider-image-3.jpg" alt="3" >
-                    <img class="slider_image" src="./Assets/slider-image-4.jpg" alt="4" >
-                    <img class="slider_image" src="./Assets/slider-image-5.jpg" alt="5" >
-                    <img class="slider_image" src="./Assets/slider-image-6.jpg" alt="6" >
-                    <img class="slider_image" src="./Assets/slider-image-7.jpg" alt="7" >
-                    <img class="slider_image" src="./Assets/slider-image-8.jpg" alt="8" >
-                    <img class="slider_image" src="./Assets/slider-image-9.jpg" alt="9" >
+                    <img class="slider_image"  src="./Assets/slider-image-1.jpg" alt="slider-image-1">
+                    <img class="slider_image"  src="./Assets/slider-image-2.jpg" alt="slider-image-2">
+                    <img class="slider_image" src="./Assets/slider-image-3.jpg" alt="slider-image-3" >
+                    <img class="slider_image" src="./Assets/slider-image-4.jpg" alt="slider-image-4" >
+                    <img class="slider_image" src="./Assets/slider-image-5.jpg" alt="slider-image-5" >
+                    <img class="slider_image" src="./Assets/slider-image-6.jpg" alt="slider-image-6" >
+                    <img class="slider_image" src="./Assets/slider-image-7.jpg" alt="slider-image-7" >
+                    <img class="slider_image" src="./Assets/slider-image-8.jpg" alt="slider-image-8" >
+                    <img class="slider_image" src="./Assets/slider-image-9.jpg" alt="slider-image-9" >
                 </div>
                 <div class="row_bottom">
                     <div class="slider_two">
-                        <img class="slider_image" src="./Assets/slider-image-9.jpg" alt="9" >
-                        <img class="slider_image" src="./Assets/slider-image-8.jpg" alt="8" >
-                        <img class="slider_image" src="./Assets/slider-image-7.jpg" alt="7" >
-                        <img class="slider_image" src="./Assets/slider-image-6.jpg" alt="6" >
-                        <img class="slider_image" src="./Assets/slider-image-5.jpg" alt="5" >
-                        <img class="slider_image" src="./Assets/slider-image-4.jpg" alt="4" >
-                        <img class="slider_image" src="./Assets/slider-image-3.jpg" alt="3" >
-                        <img class="slider_image"  src="./Assets/slider-image-2.jpg" alt="2">
-                        <img class="slider_image"  src="./Assets/slider-image-1.jpg" alt="1">       
+                        <img class="slider_image" src="./Assets/slider-image-9.jpg" alt="slider-image-9" >
+                        <img class="slider_image" src="./Assets/slider-image-8.jpg" alt="slider-image-8" >
+                        <img class="slider_image" src="./Assets/slider-image-7.jpg" alt="slider-image-7" >
+                        <img class="slider_image" src="./Assets/slider-image-6.jpg" alt="slider-image-6" >
+                        <img class="slider_image" src="./Assets/slider-image-5.jpg" alt="slider-image-5" >
+                        <img class="slider_image" src="./Assets/slider-image-4.jpg" alt="slider-image-4" >
+                        <img class="slider_image" src="./Assets/slider-image-3.jpg" alt="slider-image-3" >
+                        <img class="slider_image"  src="./Assets/slider-image-2.jpg" alt="slider-image-2">
+                        <img class="slider_image"  src="./Assets/slider-image-1.jpg" alt="slider-image-1">       
                     </div>
                     <div class="controls">
                             <button class="prev"><img id="left" src="./Assets/arrow-gray-left.png" alt="prev"></button>
